@startuml 
title Diagrama General


class Ciudad{
    - nombre : String
    - lugares{String, LugarDeInteres}
    + {static} registroCiudad(nombre)
    + visitar(grado, lugar) : Pista
    + nombre() : String
    + agregarPista(dificultad, descripcion, lugarElegido)

}
class Partida{
   
    + viajar(ciudad)
    + entrarEdificio(lugar)
    + sumarTiempo(tiempoASumar)
    + acuchillar()
}


class Ladron{
    - sexo : String
    - hobbie : String
    - cabello : String
    - seña : String
    - vehiculo : String
    - objetoRobado : ObjetoRobado
    + {static} registro(objetoRobado, cantidadArrestos)
    + {static} registroEspecifico(cantidadArrestos, objetoRobado, sexo, hobbie, seña, vehiculo)
    + anotarGenero(genero) : String
    + acuchillar(Policia) : int
}

class Policia{
    - grado : GradoDePolicia
    - sospechoso : Ladron
    - ciudadActual : Ciudad
    - cantLugaresVisitados : int
    - cantidadArrestos : int
    - mapa : Mapa
    + {static} registroPolicia(objetoRobado, cantidadArrestos, ciudadInicial, mapa)
    + viajar(ciudad) : int
    + entrarEdificio(lugar) : Pista
    + mostrarCiudadActual() : String
    + anotarGenero(genero)
    + obtenerArrestos()
    + recibirCuchillazo() : int
    + dormir() : int
    + tiempoDeVisita(cantLugaresVisitados) : int
}

class Mapa{
    - posicionesDeCiudades{String, Posicion}
    + {static} crear()
    + obtenerPosicion(): Posicion
    + calcularDistancia(ciudadSeleccionada, ciudadActual) : int
    + agregarCiudad(nombreCiudad, latitud, longitud)
}

interface GradoDePolicia{
    + calcularTiempoDeViaje(kilometros) : int
    + buscarPista(pistas{String, Pista}) : Pista
}

class LugarDeInteres{
    # pistas{String, Pista}
    + visitar(grado)
    + obtenerPista(grado) : Pista
    + agregarPista(dificultad, descripcion)
}

interface Pista{
    + mostrarPista()
}

interface ObjetoRobado{
	+ mostrarNombre() : String
}

class Tiempo{
    - hora : int
    - tiempoLimite : int
    + {static} inicializar()
    + agregarTiempo(tiempoDeLaAccion)
    + controlarLimite() : boolean
}


Partida "1" --o "1..*" Ladron
Partida"1" --* "1"Policia
Partida --o Tiempo
Policia --* GradoDePolicia
Policia --> Mapa
Partida "1" --* "1..*" Ciudad
Policia --> Ciudad
Ciudad "1" --> "1..5"LugarDeInteres
LugarDeInteres "1" --o "1..*" Pista
Ladron --* "1..*" ObjetoRobado


@enduml